// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Personal Details"
      key="0"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Primary ID"
      key="1"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Secondary ID"
      key="2"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Address History"
      key="3"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    >
      <div>
        <span>
          <TiTick />
        </span>
        <span>
          Completed
        </span>
      </div>
    </Tile>
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Declaration and Risk Assessment"
      key="4"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="PEP Search"
      key="5"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    />
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Experian "
      key="6"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          Edit
        </Button>
      }
    >
      <div>
        <span>
          <TiTick />
        </span>
        <span>
          Completed
        </span>
      </div>
    </Tile>
  </div>
  <div
    className="pb-4"
  >
    <Tile
      heading="Report"
      key="7"
      menu={
        <Button
          onClick={[MockFunction]}
          type="button"
          variant="primary"
        >
          View
        </Button>
      }
    />
  </div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Loader />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    isScrollable={true}
  >
    <FlexContainerResponsive
      flexColumn={true}
      hasPadding={true}
    >
      <LevelRight>
        <LevelItem>
          <a
            onClick={[Function]}
          >
            Back to Client/Logout
          </a>
        </LevelItem>
        <LevelItem>
          <a>
            Customise Form
          </a>
        </LevelItem>
      </LevelRight>
      <Component
        title="Ms Saoirse Chadwick"
      />
      <div
        className="pb-4"
      >
        <Tile
          heading="Personal Details"
          key="0"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Primary ID"
          key="1"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Secondary ID"
          key="2"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Address History"
          key="3"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Declaration and Risk Assessment"
          key="4"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="PEP Search"
          key="5"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        />
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Experian "
          key="6"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              Edit
            </Button>
          }
        >
          <div>
            <span>
              <TiTick />
            </span>
            <span>
              Completed
            </span>
          </div>
        </Tile>
      </div>
      <div
        className="pb-4"
      >
        <Tile
          heading="Report"
          key="7"
          menu={
            <Button
              type="button"
              variant="primary"
            >
              View
            </Button>
          }
        />
      </div>
    </FlexContainerResponsive>
  </FlexContainerBasic>
  <Component
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</Connect(ErrorBoundary)>
`;
